--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Generative AI\\\\Langchain-Projects\\\\End-to-end-Medical-Chatbot-Generative-AI\\\\research'"
+       "'f:\\\\A\\\\4th year notes\\\\Resume_Projects\\\\GenAI Projects\\\\End-to-end-Medical-Chatbot-Generative-AI\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -55,7 +55,7 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\Bappy\\\\Coding\\\\Youtube\\\\Generative AI\\\\Langchain-Projects\\\\End-to-end-Medical-Chatbot-Generative-AI'"
+       "'f:\\\\A\\\\4th year notes\\\\Resume_Projects\\\\GenAI Projects\\\\End-to-end-Medical-Chatbot-Generative-AI'"
       ]
      },
      "execution_count": 4,
@@ -493,7 +493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "medibot",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -507,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
